--- a/public/.htaccess
+++ b/public/.htaccess
@@ -18,4 +18,6 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    ServerName 127.0.0.1:8000
 </IfModule>
