--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^v8.49.2",
+        "laravelcollective/html": "5.4.*",
         "laravel/tinker": "^2.6.1"
     },
     "require-dev": {
