--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,12 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^8.0",
+        "php": ">=8.1.*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
         "laravel/framework": "^v8.49.2",
-        "laravelcollective/html": "5.4.*",
+        "laravelcollective/html": "v6.2.0",
         "laravel/tinker": "^2.6.1"
     },
     "require-dev": {
