--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:OFJydwIevI9sqbYe/uas1H6KOhPXAgv+Uyzuhs73Y7E=
+APP_KEY=base64:i6HWCOpMupvMrw7BKaIfDmcWDi1rBRNCOC3m6hptiNc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sg
+DB_DATABASE=supergestao
 DB_USERNAME=root
 DB_PASSWORD=root
 
